--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 .quote-wrapper {
     width: 450px;
     height: 370px;
-    margin: 0 auto;
+    margin: 0 10px;
 }
 
 .quote-wrapper .quote-heading {
